--- a/project-service/src/main/resources/static/project/project_list.html
+++ b/project-service/src/main/resources/static/project/project_list.html
@@ -60,8 +60,8 @@ layui.use(function(){ //亦可加载特定模块：layui.use(['layer','laydate']
   var objTable = table.render({
 	    elem: '#reportTbl'
 	    ,height:  540
-	    ,url: '/report/getReportListByPage' //数据接口（此处为静态数据，仅作演示）
-	    ,title: '日报'
+	    ,url: '/project/getProjectListByPage' //数据接口（此处为静态数据，仅作演示）
+	    ,title: '立项管理'
 	    ,page: true //开启分页
 	    ,toolbar: '#toolbarDemo' //开启工具栏，此处显示默认图标，可以自定义模板，详见文档
 	    ,totalRow: false //开启合计行
