--- a/project-service/src/main/resources/static/project/project_apply.html
+++ b/project-service/src/main/resources/static/project/project_apply.html
@@ -24,19 +24,33 @@
 </script>
 <script type="text/html" id="toolbarDemo">
   <div class="layui-btn-container">
-    <button class="layui-btn layui-btn-sm" lay-event="add">添加</button>
-    <button class="layui-btn layui-btn-sm" lay-event="delete">删除</button>
+    <button class="layui-btn layui-btn-sm" lay-event="add">新建项目</button>
+    <button class="layui-btn layui-btn-sm" lay-event="delete">删除项目</button>
     <!--<button class="layui-btn layui-btn-sm" lay-event="update">编辑</button>-->
   </div>
 </script>
  
-
-
-
-
-  
+<!--  -->  
 <script src="/js/layui/layui.js"></script>
 <script>
+var dataUrl = '/project/getProjectListByPage';
+var formUrl = '/project/projectForm.html';
+var area = ['1024px', '380px'];
+
+var header = [ //表头
+	{type: 'checkbox', fixed: 'left'}
+    ,{field: 'id', title: 'ID', width:50, sort: false, fixed: 'left', totalRowText: '合计：'}
+    ,{field: 'project_name', title: '项目名称', width:250}
+    ,{field: 'project_status', title: '项目状态', width:120, sort: true, totalRow: true}
+    ,{field: 'team_name', title: '施工队伍', width:120, totalRow: true}
+    ,{field: 'client_name', title: '甲方单位', width:280, totalRow: true}
+    ,{field: 'planed_start_date', title: '采集开始时间', width:180, totalRow: true}
+    ,{field: 'planed_end_date', title: '采集结束时间', width:180, totalRow: true}
+    ,{fixed: 'right', width: 150, align:'center', toolbar: '#barDemo'}
+];
+
+
+
 //加载模块  
 layui.use(function(){ //亦可加载特定模块：layui.use(['layer','laydate'], callback)
   //得到需要的内置组件
@@ -58,28 +72,14 @@ layui.use(function(){ //亦可加载特定模块：layui.use(['layer','laydate']
   });
   
   var objTable = table.render({
-	    elem: '#reportTbl'
-	    ,height:  540
-	    ,url: '/report/getReportListByPage' //数据接口（此处为静态数据，仅作演示）
-	    ,title: '立项'
+	  	elem: '#reportTbl'
+		,height:  540
+		,url: dataUrl //数据接口（此处为静态数据，仅作演示）
+		,title: '立项管理'
 	    ,page: true //开启分页
 	    ,toolbar: '#toolbarDemo' //开启工具栏，此处显示默认图标，可以自定义模板，详见文档
 	    ,totalRow: false //开启合计行
-	    ,cols: [[ //表头
-	      {type: 'checkbox', fixed: 'left'}
-	      ,{field: 'id', title: 'ID', width:50, sort: false, fixed: 'left', totalRowText: '合计：'}
-	      ,{field: 'reportDate', title: '报告日期', width:120}
-	      ,{field: 'sqkm', title: '产量', width:80, sort: true, totalRow: true}
-	      ,{field: 'sqkmWeek', title: '周产量', width:80, totalRow: true}
-	      ,{field: 'dtTime', title: 'DT时间', width:80, totalRow: true}
-	      ,{field: 'paySB', title: '付费SB', width:80, totalRow: true}
-	      ,{field: 'noPaySB', title: '非付费SB', width:95, totalRow: true}
-	      ,{field: 'captureTime', title: '采集时间', width:90, totalRow: true}
-	      ,{field: 'dailyIn', title: '日入', width:80, totalRow: true}
-	      ,{field: 'weeklyIn', title: '周入', width:80, totalRow: true}
-	      ,{field: 'remark', title: '备注', width:180, totalRow: true}
-	      ,{fixed: 'right', width: 150, align:'center', toolbar: '#barDemo'}
-	    ]]
+	    ,cols: [header]
 	  });
  // setInterval(function(){
 //	  freshTable()}, 60000);
@@ -91,20 +91,7 @@ layui.use(function(){ //亦可加载特定模块：layui.use(['layer','laydate']
     ,data = checkStatus.data; 
     switch(obj.event){
       case 'add':
-        window.parent.layer.open({
-	       	  offset: 'auto'
-        	  ,type: 2
-        	  ,title: ''
-        	  ,shadeClose: true
-        	  ,shade: false
-        	  ,maxmin: false//开启最大化最小化按钮
-        	  ,area: ['650px', '530px']
-        	  ,content: '/report/reportForm.html'
-        	  ,end : function() {
-        			//关闭弹框后触发
-        			freshTable();
-        		}
-        	});
+    	  openForm(formUrl);
       break;
       case 'update':
           if(data.length === 0){
@@ -124,7 +111,7 @@ layui.use(function(){ //亦可加载特定模块：layui.use(['layer','laydate']
         	for(var i=0;i<data.length;i++){
         		ids.push(data[i].id);
         	}
-    		var url= "/report/deleteBatch";
+    		var url= "/project/deleteBatch";
     		var obj={};
     		obj.ids = JSON2.stringify(ids);
     		$.post(url,obj,function(msg){
@@ -177,7 +164,7 @@ layui.use(function(){ //亦可加载特定模块：layui.use(['layer','laydate']
             });
           } else if(menudata.id === 'edit'){
 			//编辑操作
-        	openForm("/report/reportForm.html?open&action=edit&id="+data.id);
+        	openForm(formUrl+"?open&action=edit&id="+data.id);
           }
         }
         ,align: 'right' //右对齐弹出
@@ -195,26 +182,12 @@ layui.use(function(){ //亦可加载特定模块：layui.use(['layer','laydate']
   		objTable.reload({
 	    elem: '#reportTbl'
 	    ,height:  540
-	    ,url: '/report/getReportListByPage' //数据接口（此处为静态数据，仅作演示）
+	    ,url: dataUrl //数据接口（）
 	    ,title: '用户表'
 	    ,page: true //开启分页
 	    ,toolbar: '#toolbarDemo' //开启工具栏，此处显示默认图标，可以自定义模板，详见文档
 	    ,totalRow: false //开启合计行
-	    ,cols: [[ //表头
-	      {type: 'checkbox', fixed: 'left'}
-	      ,{field: 'id', title: 'ID', width:50, sort: false, fixed: 'left', totalRowText: '合计：'}
-	      ,{field: 'reportDate', title: '报告日期', width:120}
-	      ,{field: 'sqkm', title: '产量', width:80, sort: true, totalRow: true}
-	      ,{field: 'sqkmWeek', title: '周产量', width:80, totalRow: true}
-	      ,{field: 'dtTime', title: 'DT时间', width:80, totalRow: true}
-	      ,{field: 'paySB', title: '付费SB', width:80, totalRow: true}
-	      ,{field: 'noPaySB', title: '非付费SB', width:95, totalRow: true}
-	      ,{field: 'captureTime', title: '采集时间', width:90, totalRow: true}
-	      ,{field: 'dailyIn', title: '日入', width:80, totalRow: true}
-	      ,{field: 'weeklyIn', title: '周入', width:80, totalRow: true}
-	      ,{field: 'remark', title: '备注', width:180, totalRow: true}
-	      ,{fixed: 'right', width: 150, align:'center', toolbar: '#barDemo'}
-	    ]]
+	    ,cols: [header]
 	  });
   }
   var openForm = function(url){
@@ -225,7 +198,7 @@ layui.use(function(){ //亦可加载特定模块：layui.use(['layer','laydate']
     	  ,shadeClose: true
     	  ,shade: false
     	  ,maxmin: false//开启最大化最小化按钮
-    	  ,area: ['650px', '530px']
+    	  ,area: area
     	  ,content: url //'/report/reportForm.html'
     	  ,end : function() {
     			//关闭弹框后触发
