--- a/project-service/src/main/resources/static/project/projectForm.html
+++ b/project-service/src/main/resources/static/project/projectForm.html
@@ -77,7 +77,7 @@
     <div class="layui-inline">
       <label class="layui-form-label">重点项目</label>
       <div class="layui-input-block">
-        <input type="checkbox" checked="" name="iskeyProgram" lay-skin="switch" lay-filter="switchTest" lay-text="1|0">
+        <input type="checkbox" checked="" name="iskeyProgram" lay-skin="switch" lay-filter="switchTest" lay-text="是|否">
       </div>
     </div>
   </div>
@@ -151,8 +151,9 @@
     	})*/
 		var url= "/project/create";
 		var obj={};
-		data.field.id = null;
+		//data.field.id = null;
 		obj.info = JSON.stringify(data.field);
+		debugger
 		//layer.msg(obj.info);
 		console.log(obj.info);
 		$.post(url,obj,function(msg){
