--- a/project-service/src/main/resources/static/project/project_apply.html
+++ b/project-service/src/main/resources/static/project/project_apply.html
@@ -25,7 +25,7 @@
 <script type="text/html" id="toolbarDemo">
   <div class="layui-btn-container">
     <button class="layui-btn layui-btn-sm" lay-event="add">新建项目</button>
-    <button class="layui-btn layui-btn-sm" lay-event="delete">删除项目</button>
+    <button class="layui-btn layui-btn-sm" lay-event="delete">删除立项</button>
     <!--<button class="layui-btn layui-btn-sm" lay-event="update">编辑</button>-->
   </div>
 </script>
@@ -40,12 +40,12 @@ var area = ['1024px', '380px'];
 var header = [ //表头
 	{type: 'checkbox', fixed: 'left'}
     ,{field: 'id', title: 'ID', width:50, sort: false, fixed: 'left', totalRowText: '合计：'}
-    ,{field: 'project_name', title: '项目名称', width:250}
-    ,{field: 'project_status', title: '项目状态', width:120, sort: true, totalRow: true}
-    ,{field: 'team_name', title: '施工队伍', width:120, totalRow: true}
-    ,{field: 'client_name', title: '甲方单位', width:280, totalRow: true}
-    ,{field: 'planed_start_date', title: '采集开始时间', width:180, totalRow: true}
-    ,{field: 'planed_end_date', title: '采集结束时间', width:180, totalRow: true}
+    ,{field: 'projectName', title: '项目名称', width:250}
+    ,{field: 'projectStatus', title: '项目状态', width:120, sort: true, totalRow: true}
+    ,{field: 'teamName', title: '施工队伍', width:120, totalRow: true}
+    ,{field: 'clientName', title: '甲方单位', width:280, totalRow: true}
+    ,{field: 'planedStartDate', title: '采集开始时间', width:180, totalRow: true}
+    ,{field: 'planedEndDate', title: '采集结束时间', width:180, totalRow: true}
     ,{fixed: 'right', width: 150, align:'center', toolbar: '#barDemo'}
 ];
 
@@ -115,7 +115,7 @@ layui.use(function(){ //亦可加载特定模块：layui.use(['layer','laydate']
     		var obj={};
     		obj.ids = JSON2.stringify(ids);
     		$.post(url,obj,function(msg){
-    			if(msg=="ok"){
+    			if(msg>0){
     				layer.confirm('删除成功！', {
     					  btn: ['确认'] //按钮
     					}, function(){
