--- a/project-service/src/main/resources/static/project/project_list.html
+++ b/project-service/src/main/resources/static/project/project_list.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>项目列表</title>
+  <title>项目立项</title>
   <link href="/js/layui/css/layui.css" rel="stylesheet">
   <script type="text/javascript" src="/js/jquery/jquery.js"></script>
   <script type="text/javascript" src="/js/json2.js"></script>
@@ -15,34 +15,51 @@
 </head>
 <body>
  
-<table class="layui-hide" id="reportTbl" lay-filter="test"></table>
+<table class="layui-hide" id="dataTbl" lay-filter="test"></table>
 <div id="userPaging"></div>
 
 <script type="text/html" id="barDemo">
-  <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="detail">查看</a>
-  <a class="layui-btn layui-btn-xs" lay-event="more">更多 <i class="layui-icon layui-icon-down"></i></a>
-</script>
+  <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="view">查看</a>
+  <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="detail">概览</a>
+ <!--<a class="layui-btn layui-btn-xs" lay-event="more">更多 <i class="layui-icon layui-icon-down"></i></a>
+ --></script>
 <script type="text/html" id="toolbarDemo">
   <div class="layui-btn-container">
-    <!--<button class="layui-btn layui-btn-sm" lay-event="add">添加</button>
-    <button class="layui-btn layui-btn-sm" lay-event="delete">删除</button>
+      <input type="hidden" name="id" autocomplete="off" class="layui-input">
+        <button class="layui-btn layui-btn-sm" lay-event="search">年度</button>
+        <div class="layui-input-inline">
+            <input type="text" name="fYear" id="fYear" autocomplete="off" class="layui-input">
+        </div>
+        <button class="layui-btn layui-btn-sm" lay-event="search">项目名称</button>
+        <div class="layui-input-inline">
+            <input type="text" name="projectName" autocomplete="off" class="layui-input">
+        </div>
+
+    <!--<button class="layui-btn layui-btn-sm" lay-event="add">新建项目</button>
+    <button class="layui-btn layui-btn-sm" lay-event="delete">删除立项</button>
     <button class="layui-btn layui-btn-sm" lay-event="update">编辑</button>-->
   </div>
 </script>
  
-  
+<!--  -->  
 <script src="/js/layui/layui.js"></script>
 <script>
+var limit = 30;
+var dataUrl = '/project/getProjectListByPage?limit='+limit;
+var formUrl = '/project/projectForm.html';
+var formDetailUrl = '/project/projectDetail.html';
+var area = ['1024px', '380px'];
+
 
 var header = [ //表头
-	//{type: 'checkbox', fixed: 'left'}
-    {field: 'id', title: 'ID', width:50, sort: false, fixed: 'left', totalRowText: '合计：'}
-    ,{field: 'projectName', title: '项目名称', width:250}
-    ,{field: 'projectStatus', title: '项目状态', width:120, sort: true, totalRow: true}
-    ,{field: 'teamName', title: '施工队伍', width:120, totalRow: true}
-    ,{field: 'clientName', title: '甲方单位', width:280, totalRow: true}
-    ,{field: 'planedStartDate', title: '计划开始时间', width:180, totalRow: true}
-    ,{field: 'planedEndDate', title: '计划结束时间', width:180, totalRow: true}
+	{type: 'checkbox', fixed: 'left'}
+    ,{field: 'fYear', title: '年度', width:80, sort: false, fixed: 'left'}
+    ,{field: 'projectName', title: '项目名称', width:280}
+    ,{field: 'country', title: '项目国家', width:80}
+    ,{field: 'clientName', title: 'Clent', width:180}
+    ,{field: 'teamName', title: '队伍名称', width:120, totalRow: true}
+    ,{field: 'planedStartDate', title: '开工日期', width:180, totalRow: true}
+    ,{field: 'planedEndDate', title: '交工日期', width:180, totalRow: true}
     ,{fixed: 'right', width: 150, align:'center', toolbar: '#barDemo'}
 ];
 
@@ -58,48 +75,14 @@ layui.use(function(){ //亦可加载特定模块：layui.use(['layer','laydate']
   ,element = layui.element //元素操作
   ,slider = layui.slider //滑块
   ,dropdown = layui.dropdown //下拉菜单
-  
-  //Tab 切换
-  element.on('tab(demo)', function(data){
-    layer.tips('切换了 '+ data.index +'：'+ this.innerHTML, this, {
-      tips: 1
-    });
-  });
-  
-  var objTable = table.render({
-	    elem: '#reportTbl'
-	    ,height:  540
-	    ,url: '/project/getProjectListByPage' //数据接口（此处为静态数据，仅作演示）
-	    ,title: '立项管理'
-	    ,page: true //开启分页
-	    ,toolbar: '#toolbarDemo' //开启工具栏，此处显示默认图标，可以自定义模板，详见文档
-	    ,totalRow: false //开启合计行
-	    ,cols: [header]
-	  });
- // setInterval(function(){
-//	  freshTable()}, 60000);
-  
-  
+    
   //头工具栏事件
   table.on('toolbar(test)', function(obj){
     var checkStatus = table.checkStatus(obj.config.id)
     ,data = checkStatus.data; 
     switch(obj.event){
       case 'add':
-        window.parent.layer.open({
-	       	  offset: 'auto'
-        	  ,type: 2
-        	  ,title: ''
-        	  ,shadeClose: true
-        	  ,shade: false
-        	  ,maxmin: false//开启最大化最小化按钮
-        	  ,area: ['650px', '530px']
-        	  ,content: '/report/reportForm.html'
-        	  ,end : function() {
-        			//关闭弹框后触发
-        			freshTable();
-        		}
-        	});
+    	  openForm(formUrl);
       break;
       case 'update':
           if(data.length === 0){
@@ -119,11 +102,11 @@ layui.use(function(){ //亦可加载特定模块：layui.use(['layer','laydate']
         	for(var i=0;i<data.length;i++){
         		ids.push(data[i].id);
         	}
-    		var url= "/report/deleteBatch";
+    		var url= "/project/deleteBatch";
     		var obj={};
     		obj.ids = JSON2.stringify(ids);
     		$.post(url,obj,function(msg){
-    			if(msg=="ok"){
+    			if(msg>0){
     				layer.confirm('删除成功！', {
     					  btn: ['确认'] //按钮
     					}, function(){
@@ -149,16 +132,19 @@ layui.use(function(){ //亦可加载特定模块：layui.use(['layer','laydate']
   table.on('tool(test)', function(obj){ //注：tool 是工具条事件名，test 是 table 原始容器的属性 lay-filter="对应的值"
     var data = obj.data //获得当前行数据
     ,layEvent = obj.event; //获得 lay-event 对应的值
-    if(layEvent === 'detail'){
-      layer.msg('查看操作');
+    if(layEvent === 'view'){
+      //layer.msg('查看操作');
+      openForm(formUrl+"?open&action=edit&id="+data.id);
+    } else if(layEvent === 'detail'){
+      openForm(formDetailUrl+"?open&action=edit&id="+data.id);
     } else if(layEvent === 'more'){
       //下拉菜单
       dropdown.render({
         elem: this //触发事件的 DOM 对象
         ,show: true //外部事件触发即显示
         ,data: [{
-          title: '编辑'
-          ,id: 'edit'
+          title: '概览'
+          ,id: 'detail'
         },{
           title: '删除'
           ,id: 'del'
@@ -172,8 +158,11 @@ layui.use(function(){ //亦可加载特定模块：layui.use(['layer','laydate']
             });
           } else if(menudata.id === 'edit'){
 			//编辑操作
-        	openForm("/report/reportForm.html?open&action=edit&id="+data.id);
-          }
+        	openForm(formUrl+"?open&action=edit&id="+data.id);
+          } else if(menudata.id === 'detail'){
+  			//编辑操作
+          	openForm(formDetailUrl+"?open&action=edit&id="+data.id);
+            }
         }
         ,align: 'right' //右对齐弹出
         ,style: 'box-shadow: 1px 1px 10px rgb(0 0 0 / 12%);' //设置额外样式
@@ -186,11 +175,16 @@ layui.use(function(){ //亦可加载特定模块：layui.use(['layer','laydate']
   //lay('#footer').html(layui.laytpl(footerTpl).render({}))
   //.removeClass('layui-hide');
   
+  var objTable = table.render({});
+
+  // setInterval(function(){
+  // freshTable()}, 30000);
+  
   var freshTable=function(){
   		objTable.reload({
-	    elem: '#reportTbl'
+	    elem: '#dataTbl'
 	    ,height:  540
-	    ,url: '/report/getReportListByPage' //数据接口（此处为静态数据，仅作演示）
+	    ,url: dataUrl //数据接口（）
 	    ,title: '用户表'
 	    ,page: true //开启分页
 	    ,toolbar: '#toolbarDemo' //开启工具栏，此处显示默认图标，可以自定义模板，详见文档
@@ -198,15 +192,17 @@ layui.use(function(){ //亦可加载特定模块：layui.use(['layer','laydate']
 	    ,cols: [header]
 	  });
   }
+  freshTable();
+  
   var openForm = function(url){
-      window.parent.layer.open({
+     var index = window.layer.open({
        	  offset: 'auto'
     	  ,type: 2
     	  ,title: ''
-    	  ,shadeClose: true
-    	  ,shade: false
+    	  ,shadeClose: false
+    	  ,shade: true
     	  ,maxmin: false//开启最大化最小化按钮
-    	  ,area: ['650px', '530px']
+    	  ,area: area
     	  ,content: url //'/report/reportForm.html'
     	  ,end : function() {
     			//关闭弹框后触发
@@ -214,7 +210,13 @@ layui.use(function(){ //亦可加载特定模块：layui.use(['layer','laydate']
     		}
     	  //,btn: ['确定录入', '关闭']
     	});
+    layer.full(index); //打开后满屏显示
   }
+    
+  laydate.render({
+		elem: '#fYear',
+		type: 'year'
+	});
 });
 </script>
 </body>
